renamed files for pylint

--- a/evaluation/Classification_stab_rob.ipynb
+++ b/evaluation/Classification_stab_rob.ipynb
@@ -42,7 +42,8 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy import stats as st"
    ]
   },
   {
@@ -69,7 +70,7 @@
     "### 3 Stability and Robustness\n",
     "Create a table with the robustness and stability results. The stability results stem from experiements where the same model, calibration set and test set have been exaplained 30 times. The only source of variation is the random seed. The robustness restults stem from experiments where training and calibration sets have been randomly resampled before a new model have been trained and explained. The experiment where run 30 times and the test set was the same for all models. The robustness is measured in this way to avoid inferring perturbed instances which are not from the same distribution as the test instances being explained. The probability estimate of each of the models was computed on the same test set, as comparison to the robustness results. The expectationis that a stable and robust explanation method should result in low variance in the feature importance weights.\n",
     "\n",
-    "Everything was run on 25 datasets. See the `Classification_Experiment stab rob.py` for details on the experiment.\n",
+    "Everything was run on 25 datasets. See the `Classification_Experiment_stab_rob.py` for details on the experiment.\n",
     "\n",
     "The tabulated results are the mean variance of the stability and robustness measured over the 30 runs and 20 instances. The variance is measured per instance and computed over the 30 runs on the feature importance weight of the most influential feature, defined as the feature most often having highest absolut feature importance weight. The average variance is computed over the 20 instances. The most influential feature is used since it is the feature that is most likely to be used in a decision but also the feature with the greatest expected variation (as a consequence of the weights having the highest absolute values). \n",
     "\n",
@@ -105,7 +106,6 @@
     }
    ],
    "source": [
-    "from scipy import stats as st\n",
     "stab_rank = {}\n",
     "stab_val = {}\n",
     "stab_res = {}\n",
@@ -168,8 +168,6 @@
     "        for inst in range(n):\n",
     "            rob_proba.append(np.var([robustness['proba'][j][inst] for j in range(r)]))\n",
     "        \n",
-    "        # print(stab_rank)\n",
-    "        # print(stab_val)\n",
     "        average_results[a+'_stab_ce'].append(np.mean([t[1] for t in stab_val[\"ce\"]]))\n",
     "        average_results[a+'_stab_cce'].append(np.mean([t[1] for t in stab_val[\"cce\"]]))\n",
     "        average_results[a+'_rob_ce'].append(np.mean([t[1] for t in rob_val[\"ce\"]]))\n",
@@ -194,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As can be seen above, the stability is practically 0 for both factual CE (CE) and conterfactual CE (CCE), illustrating that the method is stable by definition. The robustness is also low, even if the mean variance is non-negligible. However, the robustness is low in comparison to the variance of the probability estimates used as reference, having on average about half the size of the variance of the probability estimates. This indicates that the method is fairly robust to perturbations such as variations of the calibration set and the model. \n",
+    "As can be seen above, the stability is practically 0 for both factual CE (CE) and counterfactual CE (CCE), illustrating that the method is stable by definition. The robustness is also low, even if the mean variance is non-negligible. However, the robustness is low in comparison to the variance of the probability estimates used as reference, having on average about half the size of the variance of the probability estimates. This indicates that the method is fairly robust to perturbations such as variations of the calibration set and the model. Obviously, since the method is explaining the calibrated probability estimates of the model, it must be expected that the method is, to some degree, sensitive to changes in the model. However, the results indicate that the method is not overly sensitive to changes in the model. \n",
     "\n",
     "### 4 Computing time\n",
     "Now, lets look at the times taken to compute the explanations. The tabulated computing times are the average time in seconds. The results are printed as a latex table."
