--- a/evaluation/Classification_stab_rob.ipynb
+++ b/evaluation/Classification_stab_rob.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,12 +55,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('results_stab_rob.pkl', 'rb') as f:\n",
-    "    results = pickle.load(f)"
+    "    results = pickle.load(f)\n",
+    "data_characteristics = {'colic': 60, \n",
+    "                        'creditA': 43, \n",
+    "                        'diabetes': 9, \n",
+    "                        'german': 28, \n",
+    "                        'haberman': 4, \n",
+    "                        'haberman': 4,\n",
+    "                        'heartC': 23,\n",
+    "                        'heartH': 21,\n",
+    "                        'heartS': 14,\n",
+    "                        'hepati': 20,\n",
+    "                        'iono': 34,\n",
+    "                        'je4042': 9,\n",
+    "                        'je4243': 9, \n",
+    "                        'kc1': 22,\n",
+    "                        'kc2': 22,\n",
+    "                        'kc3': 40,\n",
+    "                        'liver': 7,\n",
+    "                        'pc1req': 9,\n",
+    "                        'pc4': 38,\n",
+    "                        'sonar': 61,\n",
+    "                        'spect': 23,\n",
+    "                        'spectf': 45,\n",
+    "                        'transfusion': 5,\n",
+    "                        'ttt': 28,\n",
+    "                        'vote': 17,\n",
+    "                        'wbc': 10,}"
    ]
   },
   {
@@ -79,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -101,10 +127,12 @@
       "iono & 4.1e-35 & 4.1e-35 & 3.6e-33 & 3.6e-33 \\\\\n",
       "je4042 & 1.5e-33 & 1.5e-33 & 6.4e-33 & 6.4e-33 \\\\\n",
       "je4243 & 5.3e-34 & 5.3e-34 & 5.0e-33 & 5.0e-33 \\\\\n",
+      "kc1 & 5.4e-34 & 5.4e-34 & 1.7e-33 & 1.7e-33 \\\\\n",
       "kc2 & 7.7e-34 & 7.7e-34 & 5.0e-34 & 5.0e-34 \\\\\n",
       "kc3 & 1.4e-35 & 1.4e-35 & 5.7e-34 & 5.7e-34 \\\\\n",
       "liver & 2.2e-33 & 2.2e-33 & 8.7e-33 & 8.7e-33 \\\\\n",
       "pc1req & 7.7e-35 & 7.7e-35 & 1.8e-33 & 1.8e-33 \\\\\n",
+      "pc4 & 3.7e-34 & 3.7e-34 & 2.5e-33 & 2.5e-33 \\\\\n",
       "sonar & 1.8e-34 & 1.8e-34 & 2.2e-33 & 2.2e-33 \\\\\n",
       "spect & 0.0e+00 & 0.0e+00 & 1.5e-33 & 1.5e-33 \\\\\n",
       "spectf & 4.6e-34 & 4.6e-34 & 4.2e-34 & 4.2e-34 \\\\\n",
@@ -113,7 +141,7 @@
       "vote & 0.0e+00 & 0.0e+00 & 6.5e-33 & 6.5e-33 \\\\\n",
       "wbc & 5.7e-33 & 5.7e-33 & 2.5e-33 & 2.5e-33 \\\\\n",
       "\\hline\n",
-      "Average & 7.9e-34 & 7.9e-34 & 5.7e-33 & 5.7e-33 \\\\\n"
+      "Average & 7.6e-34 & 7.6e-34 & 5.4e-33 & 5.4e-33 \\\\\n"
      ]
     }
    ],
@@ -174,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -192,30 +220,25 @@
       "heartC & 0.012 & 0.012 & 0.017 & 0.012 & 0.012 & 0.016 \\\\\n",
       "heartH & 0.017 & 0.017 & 0.017 & 0.011 & 0.011 & 0.016 \\\\\n",
       "heartS & 0.019 & 0.019 & 0.018 & 0.017 & 0.017 & 0.017 \\\\\n",
-      "hepati & 0.022 & 0.022 & 0.018 & 0.014 & 0.014 & "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.017 \\\\\n",
+      "hepati & 0.022 & 0.022 & 0.018 & 0.014 & 0.014 & 0.017 \\\\\n",
       "iono & 0.028 & 0.028 & 0.017 & 0.013 & 0.013 & 0.016 \\\\\n",
       "je4042 & 0.018 & 0.018 & 0.017 & 0.015 & 0.015 & 0.017 \\\\\n",
       "je4243 & 0.010 & 0.010 & 0.018 & 0.010 & 0.010 & 0.017 \\\\\n",
-      "kc2 & 0.018 & 0.018 & 0.018 & 0.007 & 0.007 & 0.018 \\\\\n",
+      "kc1 & 0.011 & 0.011 & 0.017 & 0.009 & 0.009 & 0.017 \\\\\n",
+      "kc2 & 0.018 & 0.018 & 0.018 & 0.007 & 0.007 & 0.017 \\\\\n",
       "kc3 & 0.007 & 0.007 & 0.017 & 0.005 & 0.005 & 0.017 \\\\\n",
-      "liver & 0.025 & 0.025 & 0.018 & 0.030 & 0.030 & 0.017 \\\\\n",
-      "pc1req & 0.014 & 0.014 & 0.018 & 0.014 & 0.014 & 0.018 \\\\\n",
-      "sonar & 0.019 & 0.019 & 0.018 & 0.009 & 0.009 & 0.017 \\\\\n",
-      "spect & 0.007 & 0.007 & 0.017 & 0.006 & 0.006 & 0.017 \\\\\n",
-      "spectf & 0.006 & 0.006 & 0.017 & 0.005 & 0.005 & 0.017 \\\\\n",
+      "liver & 0.025 & 0.025 & 0.017 & 0.030 & 0.030 & 0.017 \\\\\n",
+      "pc1req & 0.014 & 0.014 & 0.018 & 0.014 & 0.014 & 0.017 \\\\\n",
+      "pc4 & 0.009 & 0.009 & 0.017 & 0.007 & 0.007 & 0.017 \\\\\n",
+      "sonar & 0.019 & 0.019 & 0.017 & 0.009 & 0.009 & 0.017 \\\\\n",
+      "spect & 0.007 & 0.007 & 0.017 & 0.006 & 0.006 & 0.016 \\\\\n",
+      "spectf & 0.006 & 0.006 & 0.016 & 0.005 & 0.005 & 0.016 \\\\\n",
       "transfusion & 0.009 & 0.009 & 0.017 & 0.008 & 0.008 & 0.017 \\\\\n",
-      "ttt & 0.017 & 0.017 & 0.017 & 0.025 & 0.025 & 0.017 \\\\\n",
-      "vote & 0.014 & 0.014 & 0.017 & 0.011 & 0.011 & 0.016 \\\\\n",
-      "wbc & 0.021 & 0.021 & 0.016 & 0.018 & 0.018 & 0.016 \\\\\n",
+      "ttt & 0.017 & 0.017 & 0.016 & 0.025 & 0.025 & 0.016 \\\\\n",
+      "vote & 0.014 & 0.014 & 0.016 & 0.011 & 0.011 & 0.016 \\\\\n",
+      "wbc & 0.021 & 0.021 & 0.016 & 0.018 & 0.018 & 0.015 \\\\\n",
       "\\hline\n",
-      "Average & 0.015 & 0.015 & 0.017 & 0.013 & 0.013 & 0.016 \\\\\n"
+      "Average & 0.015 & 0.015 & 0.016 & 0.012 & 0.012 & 0.016 \\\\\n"
      ]
     }
    ],
@@ -288,41 +311,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runtime & xGB & xGB & xGB & xGB & RF & RF & RF & RF \\\\\n",
-      "Dataset & CE Stability & CCE Stability & CE Robustness & CCE Robustness & CE Stability & CCE Stability & CE Robustness & CCE Robustness \\\\\n",
+      "Runtime & xGB & xGB & xGB & xGB & RF & RF & RF & RF & \\\\\n",
+      "Dataset & CE Stability & CCE Stability & CE Robustness & CCE Robustness & CE Stability & CCE Stability & CE Robustness & CCE Robustness & #Features\\\\\n",
       "\\hline\n",
-      "colic & 0.38 & 0.41 & 0.38 & 0.41 & 1.03 & 1.12 & 1.05 & 3.40 \\\\\n",
-      "creditA & 0.37 & 0.39 & 0.37 & 0.40 & 0.94 & 1.01 & 0.94 & 1.01 \\\\\n",
-      "diabetes & 0.13 & 0.17 & 0.13 & 0.17 & 0.35 & 0.46 & 0.35 & 0.47 \\\\\n",
-      "german & 0.18 & 0.18 & 0.19 & 0.19 & 0.45 & 0.45 & 0.46 & 0.46 \\\\\n",
-      "haberman & 0.06 & 0.06 & 0.06 & 0.06 & 0.14 & 0.14 & 0.14 & 0.15 \\\\\n",
-      "heartC & 0.20 & 0.23 & 0.21 & 0.25 & 0.51 & 0.56 & 0.50 & 0.58 \\\\\n",
-      "heartH & 0.17 & 0.20 & 0.17 & 0.20 & 0.42 & 0.48 & 0.44 & 0.52 \\\\\n",
-      "heartS & 0.16 & 0.19 & 0.16 & 0.19 & 0.37 & 0.44 & 0.38 & 0.45 \\\\\n",
-      "hepati & 0.19 & 0.23 & 0.20 & 0.23 & 0.47 & 0.55 & 0.46 & 0.55 \\\\\n",
-      "iono & 0.50 & 0.73 & 0.52 & 0.75 & 1.22 & 1.76 & 1.21 & 1.77 \\\\\n",
-      "je4042 & 0.14 & 0.14 & 0.15 & 0.15 & 0.36 & 0.36 & 0.36 & 0.36 \\\\\n",
-      "je4243 & 0.16 & 0.16 & 0.16 & 0.16 & 0.38 & 0.38 & 0.40 & 0.40 \\\\\n",
-      "kc2 & 0.37 & 0.49 & 0.40 & 0.51 & 0.91 & 1.19 & 0.93 & 1.19 \\\\\n",
-      "kc3 & 0.67 & 0.81 & 0.68 & 0.82 & 1.66 & 1.98 & 1.66 & 2.00 \\\\\n",
-      "liver & 0.10 & 0.14 & 0.10 & 0.14 & 0.25 & 0.35 & 0.26 & 0.36 \\\\\n",
-      "pc1req & 0.09 & 0.09 & 0.09 & 0.09 & 0.23 & 0.23 & 0.23 & 0.23 \\\\\n",
-      "sonar & 1.04 & 1.38 & 1.05 & 1.38 & 2.56 & 3.41 & 2.52 & 3.32 \\\\\n",
-      "spect & 0.15 & 0.15 & 0.15 & 0.15 & 0.34 & 0.34 & 0.33 & 0.32 \\\\\n",
-      "spectf & 0.77 & 0.77 & 0.78 & 0.78 & 1.89 & 1.89 & 1.83 & 1.84 \\\\\n",
-      "transfusion & 0.08 & 0.08 & 0.08 & 0.08 & 0.18 & 0.18 & 0.19 & 0.19 \\\\\n",
-      "ttt & 0.16 & 0.16 & 0.16 & 0.16 & 0.41 & 0.42 & 0.48 & 0.50 \\\\\n",
-      "vote & 0.11 & 0.11 & 0.11 & 0.10 & 0.25 & 0.25 & 0.24 & 0.24 \\\\\n",
-      "wbc & 0.17 & 0.20 & 0.17 & 0.20 & 0.40 & 0.48 & 0.39 & 0.47 \\\\\n",
+      "colic & 0.38 & 0.41 & 0.38 & 0.41 & 1.03 & 1.12 & 1.05 & 3.40 & 60 \\\\\n",
+      "creditA & 0.37 & 0.39 & 0.37 & 0.40 & 0.94 & 1.01 & 0.94 & 1.01 & 43 \\\\\n",
+      "diabetes & 0.13 & 0.17 & 0.13 & 0.17 & 0.35 & 0.46 & 0.35 & 0.47 & 9 \\\\\n",
+      "german & 0.18 & 0.18 & 0.19 & 0.19 & 0.45 & 0.45 & 0.46 & 0.46 & 28 \\\\\n",
+      "haberman & 0.06 & 0.06 & 0.06 & 0.06 & 0.14 & 0.14 & 0.14 & 0.15 & 4 \\\\\n",
+      "heartC & 0.20 & 0.23 & 0.21 & 0.25 & 0.51 & 0.56 & 0.50 & 0.58 & 23 \\\\\n",
+      "heartH & 0.17 & 0.20 & 0.17 & 0.20 & 0.42 & 0.48 & 0.44 & 0.52 & 21 \\\\\n",
+      "heartS & 0.16 & 0.19 & 0.16 & 0.19 & 0.37 & 0.44 & 0.38 & 0.45 & 14 \\\\\n",
+      "hepati & 0.19 & 0.23 & 0.20 & 0.23 & 0.47 & 0.55 & 0.46 & 0.55 & 20 \\\\\n",
+      "iono & 0.50 & 0.73 & 0.52 & 0.75 & 1.22 & 1.76 & 1.21 & 1.77 & 34 \\\\\n",
+      "je4042 & 0.14 & 0.14 & 0.15 & 0.15 & 0.36 & 0.36 & 0.36 & 0.36 & 9 \\\\\n",
+      "je4243 & 0.16 & 0.16 & 0.16 & 0.16 & 0.38 & 0.38 & 0.40 & 0.40 & 9 \\\\\n",
+      "kc1 & 0.36 & 0.45 & 0.36 & 0.46 & 0.91 & 1.16 & 0.89 & 1.13 & 22 \\\\\n",
+      "kc2 & 0.37 & 0.49 & 0.40 & 0.51 & 0.91 & 1.19 & 0.93 & 1.19 & 22 \\\\\n",
+      "kc3 & 0.67 & 0.81 & 0.68 & 0.82 & 1.66 & 1.98 & 1.66 & 2.00 & 40 \\\\\n",
+      "liver & 0.10 & 0.14 & 0.10 & 0.14 & 0.25 & 0.35 & 0.26 & 0.36 & 7 \\\\\n",
+      "pc1req & 0.09 & 0.09 & 0.09 & 0.09 & 0.23 & 0.23 & 0.23 & 0.23 & 9 \\\\\n",
+      "pc4 & 0.59 & 0.76 & 0.54 & 0.71 & 1.53 & 2.00 & 1.54 & 3.38 & 38 \\\\\n",
+      "sonar & 1.04 & 1.38 & 1.05 & 1.38 & 2.56 & 3.41 & 2.52 & 3.32 & 61 \\\\\n",
+      "spect & 0.15 & 0.15 & 0.15 & 0.15 & 0.34 & 0.34 & 0.33 & 0.32 & 23 \\\\\n",
+      "spectf & 0.77 & 0.77 & 0.78 & 0.78 & 1.89 & 1.89 & 1.83 & 1.84 & 45 \\\\\n",
+      "transfusion & 0.08 & 0.08 & 0.08 & 0.08 & 0.18 & 0.18 & 0.19 & 0.19 & 5 \\\\\n",
+      "ttt & 0.16 & 0.16 & 0.16 & 0.16 & 0.41 & 0.42 & 0.48 & 0.50 & 28 \\\\\n",
+      "vote & 0.11 & 0.11 & 0.11 & 0.10 & 0.25 & 0.25 & 0.24 & 0.24 & 17 \\\\\n",
+      "wbc & 0.17 & 0.20 & 0.17 & 0.20 & 0.40 & 0.48 & 0.39 & 0.47 & 10 \\\\\n",
       "\\hline\n",
-      "Average & 0.28 & 0.32 & 0.28 & 0.33 & 0.68 & 0.80 & 0.68 & 0.90 \\\\\n"
+      "Average & 0.29 & 0.35 & 0.29 & 0.35 & 24.0 & 0.73 & 0.86 & 0.73 & 1.01 & 24.0 \\\\\n"
      ]
     }
    ],
@@ -332,14 +357,15 @@
     "n = results['test_size']\n",
     "r = results['num_rep']\n",
     "average_time = {}\n",
+    "average_time['num_features'] = []\n",
     "for a in ['xGB', 'RF']:\n",
     "    average_time[a+'_stab_ce'] = []\n",
     "    average_time[a+'_stab_cce'] = []\n",
     "    average_time[a+'_rob_ce'] = []\n",
     "    average_time[a+'_rob_cce'] = []\n",
     "\n",
-    "print('Runtime & xGB & xGB & xGB & xGB & RF & RF & RF & RF \\\\\\\\')\n",
-    "print('Dataset & CE Stability & CCE Stability & CE Robustness & CCE Robustness & CE Stability & CCE Stability & CE Robustness & CCE Robustness \\\\\\\\\\n\\\\hline')\n",
+    "print('Runtime & xGB & xGB & xGB & xGB & RF & RF & RF & RF & \\\\\\\\')\n",
+    "print('Dataset & CE Stability & CCE Stability & CE Robustness & CCE Robustness & CE Stability & CCE Stability & CE Robustness & CCE Robustness & #Features\\\\\\\\\\n\\\\hline')\n",
     "for d in np.sort(np.sort([k for k in results.keys()])):\n",
     "    if d in ['test_size', 'num_rep']:\n",
     "        continue\n",
@@ -352,14 +378,17 @@
     "        average_time[a+'_stab_cce'].append(np.mean([t/n for t in s_time[\"cce\"]]))\n",
     "        average_time[a+'_rob_ce'].append(np.mean([t/n for t in r_time[\"ce\"]]))\n",
     "        average_time[a+'_rob_cce'].append(np.mean([t/n for t in r_time[\"cce\"]]))\n",
+    "        average_time['num_features'].append(data_characteristics[d])\n",
     "        print(f'{np.mean([t/n for t in s_time[\"ce\"]]):.2f} & {np.mean([t/n for t in s_time[\"cce\"]]):.2f} & ',end='')\n",
     "        print(f'{np.mean([t/n for t in r_time[\"ce\"]]):.2f} & {np.mean([t/n for t in r_time[\"cce\"]]):.2f}',end='')\n",
+    "    print(f' & {data_characteristics[d]}', end='')\n",
     "    print(' \\\\\\\\')\n",
     "print('\\\\hline\\nAverage', end='')\n",
     "for a in ['xGB', 'RF']:\n",
     "    print(' & ', end='')\n",
     "    print(f'{np.mean(average_time[a+\"_stab_ce\"]):.2f} & {np.mean(average_time[a+\"_stab_cce\"]):.2f} & ',end='')\n",
     "    print(f'{np.mean(average_time[a+\"_rob_ce\"]):.2f} & {np.mean(average_time[a+\"_rob_cce\"]):.2f}',end='')\n",
+    "print(f' & {np.mean(average_time[\"num_features\"]):.1f}', end='')\n",
     "print(' \\\\\\\\')"
    ]
   },
@@ -376,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -386,14 +415,7 @@
       "Runtime & xGB & xGB & xGB & xGB & RF & RF & RF & RF \\\\\n",
       "Dataset & CE Stability & CCE Stability & CE Robustness & CCE Robustness & CE Stability & CCE Stability & CE Robustness & CCE Robustness \\\\\n",
       "\\hline\n",
-      "colic & 2.52e-05 & 2.37e-05 & 9.83e-06 & 3.46e-05 & 1.60e-04 & 1.52e-04 & "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.10e-03 & 1.47e+02 \\\\\n",
+      "colic & 2.52e-05 & 2.37e-05 & 9.83e-06 & 3.46e-05 & 1.60e-04 & 1.52e-04 & 1.10e-03 & 1.47e+02 \\\\\n",
       "creditA & 4.60e-05 & 2.41e-05 & 3.23e-04 & 2.40e-04 & 1.26e-04 & 2.38e-04 & 1.46e-03 & 1.47e-03 \\\\\n",
       "diabetes & 4.45e-06 & 5.56e-06 & 4.12e-06 & 8.40e-06 & 5.78e-05 & 7.14e-05 & 3.70e-05 & 6.95e-05 \\\\\n",
       "german & 1.56e-05 & 1.79e-05 & 1.07e-05 & 1.00e-05 & 3.73e-04 & 6.88e-04 & 3.93e-05 & 1.93e-05 \\\\\n",
@@ -405,10 +427,12 @@
       "iono & 1.17e-03 & 2.03e-03 & 2.36e-04 & 3.66e-04 & 1.33e-04 & 4.18e-04 & 1.93e-03 & 2.82e-03 \\\\\n",
       "je4042 & 6.75e-06 & 5.67e-06 & 5.25e-06 & 4.79e-06 & 1.68e-05 & 2.35e-05 & 1.26e-05 & 9.70e-06 \\\\\n",
       "je4243 & 3.21e-05 & 7.69e-05 & 3.20e-05 & 2.77e-05 & 1.85e-04 & 1.15e-04 & 4.08e-04 & 4.12e-04 \\\\\n",
+      "kc1 & 6.95e-05 & 9.86e-05 & 3.06e-05 & 6.87e-05 & 1.60e-04 & 4.09e-04 & 2.85e-04 & 1.76e-03 \\\\\n",
       "kc2 & 9.73e-05 & 2.72e-04 & 3.45e-04 & 3.30e-04 & 3.96e-04 & 5.42e-04 & 3.25e-04 & 7.15e-04 \\\\\n",
       "kc3 & 2.30e-04 & 4.40e-04 & 4.50e-04 & 4.32e-04 & 1.71e-03 & 2.74e-03 & 1.64e-03 & 3.51e-03 \\\\\n",
       "liver & 4.31e-06 & 4.48e-06 & 4.05e-06 & 1.50e-05 & 4.15e-06 & 9.10e-06 & 1.57e-04 & 4.07e-04 \\\\\n",
       "pc1req & 1.49e-05 & 2.26e-05 & 4.74e-05 & 4.80e-05 & 1.17e-04 & 7.46e-05 & 2.51e-04 & 2.74e-04 \\\\\n",
+      "pc4 & 1.24e-03 & 1.69e-03 & 8.08e-05 & 2.00e-04 & 2.47e-03 & 3.67e-03 & 8.84e-03 & 5.52e+01 \\\\\n",
       "sonar & 3.35e-04 & 5.91e-04 & 6.90e-05 & 5.93e-04 & 1.87e-03 & 2.75e-03 & 4.22e-04 & 2.84e-03 \\\\\n",
       "spect & 6.54e-05 & 4.82e-05 & 1.55e-05 & 3.18e-05 & 1.03e-04 & 1.04e-04 & 2.45e-05 & 1.13e-05 \\\\\n",
       "spectf & 2.96e-04 & 1.87e-04 & 1.07e-04 & 1.07e-04 & 1.52e-03 & 1.39e-03 & 1.17e-04 & 6.55e-05 \\\\\n",
@@ -417,7 +441,7 @@
       "vote & 2.22e-05 & 1.20e-05 & 2.22e-05 & 7.12e-06 & 7.94e-05 & 6.85e-05 & 9.89e-06 & 1.47e-05 \\\\\n",
       "wbc & 2.77e-05 & 5.45e-05 & 3.87e-05 & 2.34e-05 & 4.96e-04 & 2.46e-04 & 2.14e-04 & 6.96e-04 \\\\\n",
       "\\hline\n",
-      "Average & 1.18e-04 & 1.84e-04 & 8.34e-05 & 1.20e-04 & 3.79e-04 & 5.05e-04 & 1.05e-03 & 6.38e+00 \\\\\n"
+      "Average & 1.60e-04 & 2.41e-04 & 8.12e-05 & 1.21e-04 & 4.54e-04 & 6.28e-04 & 1.33e-03 & 8.08e+00 \\\\\n"
      ]
     }
    ],
