--- a/evaluation/Classification_stab_rob.ipynb
+++ b/evaluation/Classification_stab_rob.ipynb
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
       "vote & 0.11 & 0.11 & 0.11 & 0.10 & 0.25 & 0.25 & 0.24 & 0.24 & 17 \\\\\n",
       "wbc & 0.17 & 0.20 & 0.17 & 0.20 & 0.40 & 0.48 & 0.39 & 0.47 & 10 \\\\\n",
       "\\hline\n",
-      "Average & 0.29 & 0.35 & 0.29 & 0.35 & 24.0 & 0.73 & 0.86 & 0.73 & 1.01 & 24.0 \\\\\n"
+      "Average & 0.29 & 0.35 & 0.29 & 0.35 & 0.73 & 0.86 & 0.73 & 1.01 & 24.0 \\\\\n"
      ]
     }
    ],
