--- a/evaluation/Classification_Analysis_stab_rob.ipynb
+++ b/evaluation/Classification_Analysis_stab_rob.ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -37,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -300,10 +291,143 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " & xGB & xGB & RF & RF & xGB & xGB & xGB & RF & RF & RF \\\\\n",
+      "Dataset & CE & CCE & CE & CCE & CE & CCE & Model & CE & CCE & Model \\\\\n",
+      "\\hline\n",
+      "colic & 3.9e-35 & 3.9e-35 & 7.8e-33 & 7.8e-33 & 0.015 & 0.015 & 0.015 & 0.017 & 0.017 & 0.010 \\\\\n",
+      "creditA & 1.5e-34 & 1.5e-34 & 1.5e-32 & 1.5e-32 & 0.022 & 0.022 & 0.011 & 0.015 & 0.015 & 0.009 \\\\\n",
+      "diabetes & 1.2e-33 & 1.2e-33 & 5.0e-33 & 5.0e-33 & 0.017 & 0.017 & 0.014 & 0.015 & 0.015 & 0.013 \\\\\n",
+      "german & 1.2e-34 & 1.2e-34 & 9.6e-34 & 9.6e-34 & 0.003 & 0.003 & 0.015 & 0.005 & 0.005 & 0.014 \\\\\n",
+      "haberman & 5.2e-34 & 5.2e-34 & 1.2e-33 & 1.2e-33 & 0.010 & 0.010 & 0.016 & 0.011 & 0.011 & 0.016 \\\\\n",
+      "heartC & 0.0e+00 & 0.0e+00 & 2.7e-33 & 2.7e-33 & 0.012 & 0.012 & 0.017 & 0.012 & 0.012 & 0.016 \\\\\n",
+      "heartH & 2.6e-33 & 2.6e-33 & 4.9e-33 & 4.9e-33 & 0.017 & 0.017 & 0.017 & 0.011 & 0.011 & 0.016 \\\\\n",
+      "heartS & 1.6e-33 & 1.6e-33 & 4.3e-33 & 4.3e-33 & 0.019 & 0.019 & 0.018 & 0.017 & 0.017 & 0.017 \\\\\n",
+      "hepati & 1.9e-34 & 1.9e-34 & 5.2e-33 & 5.2e-33 & 0.022 & 0.022 & 0.018 & 0.014 & 0.014 & 0.017 \\\\\n",
+      "iono & 4.1e-35 & 4.1e-35 & 3.6e-33 & 3.6e-33 & 0.028 & 0.028 & 0.017 & 0.013 & 0.013 & 0.016 \\\\\n",
+      "je4042 & 1.5e-33 & 1.5e-33 & 6.4e-33 & 6.4e-33 & 0.018 & 0.018 & 0.017 & 0.015 & 0.015 & 0.017 \\\\\n",
+      "je4243 & 5.3e-34 & 5.3e-34 & 5.0e-33 & 5.0e-33 & 0.010 & 0.010 & 0.018 & 0.010 & 0.010 & 0.017 \\\\\n",
+      "kc1 & 5.4e-34 & 5.4e-34 & 1.7e-33 & 1.7e-33 & 0.011 & 0.011 & 0.017 & 0.009 & 0.009 & 0.017 \\\\\n",
+      "kc2 & 7.7e-34 & 7.7e-34 & 5.0e-34 & 5.0e-34 & 0.018 & 0.018 & 0.018 & 0.007 & 0.007 & 0.017 \\\\\n",
+      "kc3 & 1.4e-35 & 1.4e-35 & 5.7e-34 & 5.7e-34 & 0.007 & 0.007 & 0.017 & 0.005 & 0.005 & 0.017 \\\\\n",
+      "liver & 2.2e-33 & 2.2e-33 & 8.7e-33 & 8.7e-33 & 0.025 & 0.025 & 0.017 & 0.030 & 0.030 & 0.017 \\\\\n",
+      "pc1req & 7.7e-35 & 7.7e-35 & 1.8e-33 & 1.8e-33 & 0.014 & 0.014 & 0.018 & 0.014 & 0.014 & 0.017 \\\\\n",
+      "pc4 & 3.7e-34 & 3.7e-34 & 2.5e-33 & 2.5e-33 & 0.009 & 0.009 & 0.017 & 0.007 & 0.007 & 0.017 \\\\\n",
+      "sonar & 1.8e-34 & 1.8e-34 & 2.2e-33 & 2.2e-33 & 0.019 & 0.019 & 0.017 & 0.009 & 0.009 & 0.017 \\\\\n",
+      "spect & 0.0e+00 & 0.0e+00 & 1.5e-33 & 1.5e-33 & 0.007 & 0.007 & 0.017 & 0.006 & 0.006 & 0.016 \\\\\n",
+      "spectf & 4.6e-34 & 4.6e-34 & 4.2e-34 & 4.2e-34 & 0.006 & 0.006 & 0.016 & 0.005 & 0.005 & 0.016 \\\\\n",
+      "transfusion & 2.8e-34 & 2.8e-34 & 2.9e-33 & 2.9e-33 & 0.009 & 0.009 & 0.017 & 0.008 & 0.008 & 0.017 \\\\\n",
+      "ttt & 0.0e+00 & 0.0e+00 & 4.2e-32 & 4.2e-32 & 0.017 & 0.017 & 0.016 & 0.025 & 0.025 & 0.016 \\\\\n",
+      "vote & 0.0e+00 & 0.0e+00 & 6.5e-33 & 6.5e-33 & 0.014 & 0.014 & 0.016 & 0.011 & 0.011 & 0.016 \\\\\n",
+      "wbc & 5.7e-33 & 5.7e-33 & 2.5e-33 & 2.5e-33 & 0.021 & 0.021 & 0.016 & 0.018 & 0.018 & 0.015 \\\\\n",
+      "\\hline\n",
+      "Average & 7.6e-34 & 7.6e-34 & 5.4e-33 & 5.4e-33 & 0.015 & 0.015 & 0.016 & 0.012 & 0.012 & 0.016 \\\\\n"
+     ]
+    }
+   ],
+   "source": [
+    "stab_rank = {}\n",
+    "stab_val = {}\n",
+    "average_results = {}\n",
+    "for a in ['xGB', 'RF']:\n",
+    "    average_results[a+'_stab_ce'] = []\n",
+    "    average_results[a+'_stab_cce'] = []\n",
+    "rob_rank = {}\n",
+    "rob_val = {}\n",
+    "rob_proba = []\n",
+    "for a in ['xGB', 'RF']:\n",
+    "    average_results[a+'_rob_ce'] = []\n",
+    "    average_results[a+'_rob_cce'] = []\n",
+    "    average_results[a+'_rob_proba'] = []\n",
+    "\n",
+    "n = results['test_size']\n",
+    "r = results['num_rep']\n",
+    "\n",
+    "print(' & xGB & xGB & RF & RF & xGB & xGB & xGB & RF & RF & RF \\\\\\\\')\n",
+    "print('Dataset & CE & CCE & CE & CCE & CE & CCE & Model & CE & CCE & Model \\\\\\\\\\n\\\\hline')\n",
+    "\n",
+    "for d in np.sort([k for k in results.keys()]):\n",
+    "    if d in ['test_size', 'num_rep']:\n",
+    "        continue\n",
+    "    print(d, end='')\n",
+    "    for a in results[d]:\n",
+    "        print(' & ', end='')\n",
+    "        stability = results[d][a]['stability']\n",
+    "        \n",
+    "        for key in ['ce', 'cce']:    \n",
+    "            ranks = []\n",
+    "            values = []\n",
+    "            for j in range(n):\n",
+    "                rank = []\n",
+    "                value = []\n",
+    "                for i in range(r):\n",
+    "                    rank.append(np.argsort(np.abs(stability[key][i][j]['predict']))[-1:][0])\n",
+    "                ranks.append(rank)\n",
+    "                values.append(value)\n",
+    "            stab_rank[key] = st.mode(ranks, axis=1)[0] # Find most important feature per instance\n",
+    "            value = []\n",
+    "            for j in range(n):\n",
+    "                value.append([np.mean([stability[key][i][j]['predict'][stab_rank[key][j][0]] for i in range(r)]), np.var([stability[key][i][j]['predict'][stab_rank[key][j][0]] for i in range(r)])])\n",
+    "            stab_val[key] = value \n",
+    "        \n",
+    "        average_results[a+'_stab_ce'].append(np.mean([t[1] for t in stab_val[\"ce\"]]))\n",
+    "        average_results[a+'_stab_cce'].append(np.mean([t[1] for t in stab_val[\"cce\"]]))\n",
+    "        # print(f'{np.mean([t[1] if t[1] > 1e-20 else 0 for t in stab_val[\"ce\"]]):.1e} & {np.var([t[1] if t[1] > 1e-20 else 0 for t in stab_val[\"cce\"]]):.1e} & ',end='')\n",
+    "        print(f'{np.mean([t[1] for t in stab_val[\"ce\"]]):.1e} & {np.mean([t[1] for t in stab_val[\"cce\"]]):.1e}',end='')\n",
+    "        \n",
+    "    for a in results[d]:\n",
+    "        print(' & ', end='')\n",
+    "        robustness = results[d][a]['robustness']\n",
+    "        \n",
+    "        for key in ['ce', 'cce']:                \n",
+    "            ranks = []\n",
+    "            values = []\n",
+    "            for j in range(n):\n",
+    "                rank = []\n",
+    "                value = []\n",
+    "                for i in range(r):\n",
+    "                    rank.append(np.argsort(np.abs(robustness[key][i][j]['predict']))[-1:][0])\n",
+    "                ranks.append(rank)\n",
+    "                values.append(value)\n",
+    "            rob_rank[key] = st.mode(ranks, axis=1)[0] # Find most important feature per instance\n",
+    "            value = []\n",
+    "            for j in range(n):\n",
+    "                value.append([np.mean([robustness[key][i][j]['predict'][rob_rank[key][j][0]] for i in range(r)]), np.var([robustness[key][i][j]['predict'][rob_rank[key][j][0]] for i in range(r)])])\n",
+    "            rob_val[key] = value\n",
+    "        \n",
+    "        for inst in range(n):\n",
+    "            rob_proba.append(np.var([robustness['proba'][j][inst] for j in range(r)]))\n",
+    "        \n",
+    "        average_results[a+'_rob_ce'].append(np.mean([t[1] for t in rob_val[\"ce\"]]))\n",
+    "        average_results[a+'_rob_cce'].append(np.mean([t[1] for t in rob_val[\"cce\"]]))\n",
+    "        average_results[a+'_rob_proba'].append(np.mean(rob_proba))\n",
+    "        # print(f'{np.mean([t[1] if t[1] > 1e-20 else 0 for t in rob_val[\"ce\"]]):.1e} & {np.mean([t[1] if t[1] > 1e-20 else 0 for t in rob_val[\"cce\"]]):.1e} & ',end='')\n",
+    "        print(f'{np.mean([t[1] for t in rob_val[\"ce\"]]):.3f} & {np.mean([t[1] for t in rob_val[\"cce\"]]):.3f} & ',end='')\n",
+    "        print(f'{np.mean(rob_proba):.3f}', end='')\n",
+    "    print(' \\\\\\\\')\n",
+    "print('\\\\hline\\nAverage', end='')\n",
+    "for a in ['xGB', 'RF']:\n",
+    "    print(' & ', end='')\n",
+    "    print(f'{np.mean(average_results[a+\"_stab_ce\"]):.1e} & {np.mean(average_results[a+\"_stab_cce\"]):.1e}',end='')\n",
+    "for a in ['xGB', 'RF']:\n",
+    "    print(' & ', end='')\n",
+    "    print(f'{np.mean(average_results[a+\"_rob_ce\"]):.3f} & {np.mean(average_results[a+\"_rob_cce\"]):.3f} & ',end='')\n",
+    "    print(f'{np.mean(average_results[a+\"_rob_proba\"]):.3f}', end='')\n",
+    "print(' \\\\\\\\')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The robustness is also low, even if the mean variance is non-negligible. However, the robustness is low in comparison to the variance of the probability estimates used as reference, having on average about half the size of the variance of the probability estimates. This indicates that the method is fairly robust to perturbations such as variations of the calibration set and the model. Obviously, since the method is explaining the calibrated probability estimates of the model, it must be expected that the method is, to some degree, sensitive to changes in the model. However, the results indicate that the method is not overly sensitive to changes in the model. \n",
+    "The robustness is also low, even if the mean variance robustness is clearly larger than for stability. The robustness is comparable to the variance of the probability estimates used as reference. This indicates that the method is fairly robust to perturbations such as variations of the calibration set and the model. Obviously, since the method is explaining the calibrated probability estimates of the model, it must be expected that the method is sensitive to changes in the model.  \n",
     "\n",
     "### 4 Computing time\n",
     "Now, lets look at the runtime taken to compute the explanations. The tabulated runtimes are the average time in seconds per instance. The results are printed as a latex table."
