updates to sote experiment

--- a/evaluation/Classification_Analysis_sota.ipynb
+++ b/evaluation/Classification_Analysis_sota.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -115,12 +115,32 @@
      "output_type": "stream",
      "text": [
       "Stability & xGB & xGB & xGB & xGB & xGB & xGB \\\\\n",
-      "Dataset & CE & CCE & LIME & L_VA & SHAP & S_VA \\\\\n",
+      "Dataset & CE & CCE & L_VA & S_VA & L & S \\\\\n",
       "\\hline\n",
-      "haberman & 5.2e-34 & 5.2e-34 & 1.0e-04 & 1.1e-63 & 2.7e-33 & 0.0e+00 \\\\\n",
-      "pc1req & 7.7e-35 & 7.7e-35 & 7.7e-05 & 1.2e-11 & 5.1e-33 & 3.1e-33 \\\\\n",
+      "creditA & 1.5e-34 & 1.5e-34 & 1.1e-61 & 0.0e+00 & 3.8e-05 & 1.5e-04 \\\\\n",
+      "diabetes & 1.2e-33 & 1.2e-33 & 3.7e-11 & 0.0e+00 & 9.0e-05 & 3.1e-33 \\\\\n",
+      "german & 1.2e-34 & 1.2e-34 & 5.6e-11 & 9.1e-33 & 8.0e-05 & 9.5e-05 \\\\\n",
+      "haberman & 5.2e-34 & 5.2e-34 & 1.1e-63 & 0.0e+00 & 1.0e-04 & 2.7e-33 \\\\\n",
+      "heartC & 0.0e+00 & 0.0e+00 & 1.8e-10 & 1.2e-32 & 7.1e-05 & 1.1e-04 \\\\\n",
+      "heartH & 2.6e-33 & 2.6e-33 & 1.9e-10 & 0.0e+00 & 5.4e-05 & 9.1e-05 \\\\\n",
+      "heartS & 1.6e-33 & 1.6e-33 & 7.1e-11 & 6.3e-33 & 6.2e-05 & 5.7e-05 \\\\\n",
+      "hepati & 1.9e-34 & 1.9e-34 & 6.5e-05 & 4.9e-33 & 3.0e-05 & 5.9e-05 \\\\\n",
+      "iono & 4.1e-35 & 4.1e-35 & 3.3e-05 & 1.0e-32 & 8.6e-05 & 1.3e-04 \\\\\n",
+      "je4042 & 1.5e-33 & 1.5e-33 & 1.6e-06 & 1.1e-32 & 9.6e-05 & 4.8e-33 \\\\\n",
+      "je4243 & 5.3e-34 & 5.3e-34 & 5.3e-06 & 1.9e-34 & 9.2e-05 & 2.1e-33 \\\\\n",
+      "kc2 & 7.7e-34 & 7.7e-34 & 3.6e-64 & 0.0e+00 & 6.7e-05 & 1.9e-04 \\\\\n",
+      "kc3 & 1.4e-35 & 1.4e-35 & 4.1e-06 & 0.0e+00 & 2.6e-05 & 8.1e-05 \\\\\n",
+      "liver & 2.2e-33 & 2.2e-33 & 1.2e-63 & 0.0e+00 & 1.1e-04 & 5.9e-33 \\\\\n",
+      "pc1req & 7.7e-35 & 7.7e-35 & 1.2e-11 & 3.1e-33 & 7.7e-05 & 5.1e-33 \\\\\n",
+      "sonar & 1.8e-34 & 1.8e-34 & 7.9e-07 & 7.7e-35 & 8.8e-05 & 1.3e-04 \\\\\n",
+      "spect & 0.0e+00 & 0.0e+00 & 3.2e-12 & 1.1e-32 & 1.4e-05 & 3.1e-05 \\\\\n",
+      "spectf & 4.6e-34 & 4.6e-34 & 6.9e-66 & 0.0e+00 & 2.8e-05 & 1.1e-04 \\\\\n",
+      "transfusion & 2.8e-34 & 2.8e-34 & 6.5e-64 & 0.0e+00 & 7.4e-05 & 2.6e-33 \\\\\n",
+      "ttt & 0.0e+00 & 0.0e+00 & 1.6e-10 & 5.5e-33 & 8.1e-05 & 2.6e-04 \\\\\n",
+      "vote & 0.0e+00 & 0.0e+00 & 3.0e-11 & 4.3e-33 & 5.6e-05 & 8.1e-05 \\\\\n",
+      "wbc & 5.7e-33 & 5.7e-33 & 3.0e-05 & 0.0e+00 & 9.9e-05 & 2.1e-33 \\\\\n",
       "\\hline\n",
-      "Average & 3.0e-34 & 3.0e-34 & 8.8e-05 & 6.0e-12 & 3.9e-33 & 1.5e-33 \\\\\n"
+      "Average & 8.3e-34 & 8.3e-34 & 6.4e-06 & 3.6e-33 & 6.9e-05 & 7.2e-05 \\\\\n"
      ]
     }
    ],
@@ -139,7 +159,7 @@
     "n = results['test_size']\n",
     "r = results['num_rep']\n",
     "print('Stability & xGB & xGB & xGB & xGB & xGB & xGB \\\\\\\\')\n",
-    "print('Dataset & CE & CCE & LIME & L_VA & SHAP & S_VA \\\\\\\\\\n\\\\hline')\n",
+    "print('Dataset & CE & CCE & L_VA & S_VA & L & S \\\\\\\\\\n\\\\hline')\n",
     "for d in np.sort([k for k in results.keys()]):\n",
     "    if d in ['test_size', 'num_rep']:\n",
     "        continue\n",
@@ -180,12 +200,12 @@
     "            average_results[a+'_stab_'+key][d] = np.mean([t[1] for t in stab_val[key]])\n",
     "        # print(f'{np.mean([t[1] if t[1] > 1e-20 else 0 for t in stab_val[\"ce\"]]):.1e} & {np.var([t[1] if t[1] > 1e-20 else 0 for t in stab_val[\"cce\"]]):.1e} & ',end='')\n",
     "        \n",
-    "        for key in ['ce', 'cce', 'lime', 'lime_va', 'shap', 'shap_va']:\n",
+    "        for key in ['ce', 'cce', 'lime_va', 'shap_va', 'lime', 'shap']:\n",
     "            print(f' & {average_results[a+\"_stab_\"+key][d]:.1e}',end='')\n",
     "    print(' \\\\\\\\')\n",
     "print('\\\\hline\\nAverage', end='')\n",
     "for a in algorithms:\n",
-    "    for key in ['ce', 'cce', 'lime', 'lime_va', 'shap', 'shap_va']:\n",
+    "    for key in ['ce', 'cce', 'lime_va', 'shap_va', 'lime', 'shap']:\n",
     "        print(f' & {np.mean([v for v in average_results[a+\"_stab_\"+key].values()]):.1e}',end='')\n",
     "print(' \\\\\\\\')"
    ]
@@ -194,12 +214,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As can be seen above, the stability is practically 0 for both factual CE (CE) and counterfactual CE (CCE), illustrating that the method is stable by definition. "
+    "As can be seen above, the stability is practically 0 for both factual CE (CE) and counterfactual CE (CCE), illustrating that the method is stable by definition. Explanations extracted using SHAP (S_VA) from calibrated models are also practically 0. LIME on calibrated models (L_VA) and both LIME (L) and SHAP (S) on uncalibrated models are clearly less stable. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -209,10 +229,30 @@
       "Robustness & xGB & xGB & xGB & xGB & xGB & xGB & xGB & xGB \\\\\n",
       "Dataset & CE & CCE & L_VA & S_VA & VA & L & S & UC \\\\\n",
       "\\hline\n",
-      "haberman & 0.010 & 0.010 & 0.000 & 0.000 & 0.010 & 0.008 & 0.011 & 0.033 \\\\\n",
-      "pc1req & 0.014 & 0.014 & 0.009 & 0.004 & 0.008 & 0.017 & 0.011 & 0.035 \\\\\n",
+      "creditA & 0.022 & 0.022 & 0.000 & 0.000 & 0.000 & 0.002 & 0.002 & 0.012 \\\\\n",
+      "diabetes & 0.017 & 0.017 & 0.000 & 0.000 & 0.002 & 0.004 & 0.005 & 0.023 \\\\\n",
+      "german & 0.003 & 0.003 & 0.006 & 0.002 & 0.002 & 0.006 & 0.006 & 0.024 \\\\\n",
+      "haberman & 0.010 & 0.010 & 0.000 & 0.000 & 0.004 & 0.008 & 0.011 & 0.026 \\\\\n",
+      "heartC & 0.012 & 0.012 & 0.001 & 0.001 & 0.003 & 0.006 & 0.004 & 0.027 \\\\\n",
+      "heartH & 0.017 & 0.017 & 0.171 & 0.002 & 0.003 & 0.006 & 0.004 & 0.027 \\\\\n",
+      "heartS & 0.019 & 0.019 & 0.001 & 0.001 & 0.003 & 0.005 & 0.003 & 0.028 \\\\\n",
+      "hepati & 0.022 & 0.022 & 0.000 & 0.001 & 0.003 & 0.011 & 0.006 & 0.029 \\\\\n",
+      "iono & 0.028 & 0.028 & 0.025 & 0.005 & 0.004 & 0.015 & 0.004 & 0.027 \\\\\n",
+      "je4042 & 0.018 & 0.018 & 0.004 & 0.001 & 0.004 & 0.013 & 0.010 & 0.028 \\\\\n",
+      "je4243 & 0.010 & 0.010 & 0.003 & 0.000 & 0.003 & 0.005 & 0.008 & 0.029 \\\\\n",
+      "kc2 & 0.018 & 0.018 & 0.000 & 0.000 & 0.004 & 0.011 & 0.009 & 0.030 \\\\\n",
+      "kc3 & 0.007 & 0.007 & 0.013 & 0.000 & 0.005 & 0.003 & 0.001 & 0.028 \\\\\n",
+      "liver & 0.025 & 0.025 & 0.000 & 0.000 & 0.004 & 0.003 & 0.006 & 0.028 \\\\\n",
+      "pc1req & 0.014 & 0.014 & 0.009 & 0.004 & 0.005 & 0.017 & 0.011 & 0.029 \\\\\n",
+      "sonar & 0.019 & 0.019 & 0.001 & 0.001 & 0.005 & 0.006 & 0.004 & 0.029 \\\\\n",
+      "spect & 0.007 & 0.007 & 0.003 & 0.001 & 0.005 & 0.003 & 0.002 & 0.028 \\\\\n",
+      "spectf & 0.006 & 0.006 & 0.000 & 0.000 & 0.004 & 0.001 & 0.002 & 0.028 \\\\\n",
+      "transfusion & 0.009 & 0.009 & 0.000 & 0.000 & 0.005 & 0.004 & 0.008 & 0.028 \\\\\n",
+      "ttt & 0.017 & 0.017 & 0.000 & 0.003 & 0.004 & 0.001 & 0.002 & 0.027 \\\\\n",
+      "vote & 0.014 & 0.014 & 0.001 & 0.001 & 0.004 & 0.002 & 0.002 & 0.026 \\\\\n",
+      "wbc & 0.021 & 0.021 & 0.001 & 0.000 & 0.004 & 0.008 & 0.003 & 0.026 \\\\\n",
       "\\hline\n",
-      "Average & 0.012 & 0.012 & 0.004 & 0.002 & 0.009 & 0.013 & 0.011 & 0.034 \\\\\n"
+      "Average & 0.015 & 0.015 & 0.011 & 0.001 & 0.004 & 0.006 & 0.005 & 0.027 \\\\\n"
      ]
     }
    ],
@@ -300,15 +340,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The robustness is also low, even if the mean variance robustness is clearly larger than for stability. The robustness is comparable to the variance of the probability estimates used as reference. This indicates that the method is fairly robust to perturbations such as variations of the calibration set and the model. Obviously, since the method is explaining the calibrated probability estimates of the model, it must be expected that the method is sensitive to changes in the model.  \n",
+    "The robustness is not yet analyzed.  \n",
     "\n",
-    "### 4 Computing time\n",
+    "### 4 Computing time- not updated\n",
     "Now, lets look at the runtime taken to compute the explanations. The tabulated runtimes are the average time in seconds per instance. The results are printed as a latex table."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
