--- a/evaluation/Classification_Analysis_sota.ipynb
+++ b/evaluation/Classification_Analysis_sota.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -117,6 +117,7 @@
       "Stability & xGB & xGB & xGB & xGB & xGB & xGB \\\\\n",
       "Dataset & CE & CCE & L_VA & S_VA & L & S \\\\\n",
       "\\hline\n",
+      "colic & 3.9e-35 & 3.9e-35 & 1.4e-08 & 3.2e-33 & 3.8e-05 & 8.8e-05 \\\\\n",
       "creditA & 1.5e-34 & 1.5e-34 & 1.1e-61 & 0.0e+00 & 3.8e-05 & 1.5e-04 \\\\\n",
       "diabetes & 1.2e-33 & 1.2e-33 & 3.7e-11 & 0.0e+00 & 9.0e-05 & 3.1e-33 \\\\\n",
       "german & 1.2e-34 & 1.2e-34 & 5.6e-11 & 9.1e-33 & 8.0e-05 & 9.5e-05 \\\\\n",
@@ -128,10 +129,12 @@
       "iono & 4.1e-35 & 4.1e-35 & 3.3e-05 & 1.0e-32 & 8.6e-05 & 1.3e-04 \\\\\n",
       "je4042 & 1.5e-33 & 1.5e-33 & 1.6e-06 & 1.1e-32 & 9.6e-05 & 4.8e-33 \\\\\n",
       "je4243 & 5.3e-34 & 5.3e-34 & 5.3e-06 & 1.9e-34 & 9.2e-05 & 2.1e-33 \\\\\n",
+      "kc1 & 5.4e-34 & 5.4e-34 & 1.4e-05 & 0.0e+00 & 1.1e-04 & 9.1e-05 \\\\\n",
       "kc2 & 7.7e-34 & 7.7e-34 & 3.6e-64 & 0.0e+00 & 6.7e-05 & 1.9e-04 \\\\\n",
       "kc3 & 1.4e-35 & 1.4e-35 & 4.1e-06 & 0.0e+00 & 2.6e-05 & 8.1e-05 \\\\\n",
       "liver & 2.2e-33 & 2.2e-33 & 1.2e-63 & 0.0e+00 & 1.1e-04 & 5.9e-33 \\\\\n",
       "pc1req & 7.7e-35 & 7.7e-35 & 1.2e-11 & 3.1e-33 & 7.7e-05 & 5.1e-33 \\\\\n",
+      "pc4 & 3.7e-34 & 3.7e-34 & 8.8e-63 & 0.0e+00 & 4.1e-05 & 1.6e-04 \\\\\n",
       "sonar & 1.8e-34 & 1.8e-34 & 7.9e-07 & 7.7e-35 & 8.8e-05 & 1.3e-04 \\\\\n",
       "spect & 0.0e+00 & 0.0e+00 & 3.2e-12 & 1.1e-32 & 1.4e-05 & 3.1e-05 \\\\\n",
       "spectf & 4.6e-34 & 4.6e-34 & 6.9e-66 & 0.0e+00 & 2.8e-05 & 1.1e-04 \\\\\n",
@@ -140,7 +143,7 @@
       "vote & 0.0e+00 & 0.0e+00 & 3.0e-11 & 4.3e-33 & 5.6e-05 & 8.1e-05 \\\\\n",
       "wbc & 5.7e-33 & 5.7e-33 & 3.0e-05 & 0.0e+00 & 9.9e-05 & 2.1e-33 \\\\\n",
       "\\hline\n",
-      "Average & 8.3e-34 & 8.3e-34 & 6.4e-06 & 3.6e-33 & 6.9e-05 & 7.2e-05 \\\\\n"
+      "Average & 7.6e-34 & 7.6e-34 & 6.2e-06 & 3.3e-33 & 6.8e-05 & 7.7e-05 \\\\\n"
      ]
     }
    ],
@@ -219,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -229,30 +232,33 @@
       "Robustness & xGB & xGB & xGB & xGB & xGB & xGB & xGB & xGB \\\\\n",
       "Dataset & CE & CCE & L_VA & S_VA & VA & L & S & UC \\\\\n",
       "\\hline\n",
-      "creditA & 0.022 & 0.022 & 0.000 & 0.000 & 0.000 & 0.002 & 0.002 & 0.012 \\\\\n",
-      "diabetes & 0.017 & 0.017 & 0.000 & 0.000 & 0.002 & 0.004 & 0.005 & 0.023 \\\\\n",
-      "german & 0.003 & 0.003 & 0.006 & 0.002 & 0.002 & 0.006 & 0.006 & 0.024 \\\\\n",
-      "haberman & 0.010 & 0.010 & 0.000 & 0.000 & 0.004 & 0.008 & 0.011 & 0.026 \\\\\n",
-      "heartC & 0.012 & 0.012 & 0.001 & 0.001 & 0.003 & 0.006 & 0.004 & 0.027 \\\\\n",
-      "heartH & 0.017 & 0.017 & 0.171 & 0.002 & 0.003 & 0.006 & 0.004 & 0.027 \\\\\n",
-      "heartS & 0.019 & 0.019 & 0.001 & 0.001 & 0.003 & 0.005 & 0.003 & 0.028 \\\\\n",
-      "hepati & 0.022 & 0.022 & 0.000 & 0.001 & 0.003 & 0.011 & 0.006 & 0.029 \\\\\n",
-      "iono & 0.028 & 0.028 & 0.025 & 0.005 & 0.004 & 0.015 & 0.004 & 0.027 \\\\\n",
-      "je4042 & 0.018 & 0.018 & 0.004 & 0.001 & 0.004 & 0.013 & 0.010 & 0.028 \\\\\n",
-      "je4243 & 0.010 & 0.010 & 0.003 & 0.000 & 0.003 & 0.005 & 0.008 & 0.029 \\\\\n",
-      "kc2 & 0.018 & 0.018 & 0.000 & 0.000 & 0.004 & 0.011 & 0.009 & 0.030 \\\\\n",
-      "kc3 & 0.007 & 0.007 & 0.013 & 0.000 & 0.005 & 0.003 & 0.001 & 0.028 \\\\\n",
-      "liver & 0.025 & 0.025 & 0.000 & 0.000 & 0.004 & 0.003 & 0.006 & 0.028 \\\\\n",
-      "pc1req & 0.014 & 0.014 & 0.009 & 0.004 & 0.005 & 0.017 & 0.011 & 0.029 \\\\\n",
-      "sonar & 0.019 & 0.019 & 0.001 & 0.001 & 0.005 & 0.006 & 0.004 & 0.029 \\\\\n",
-      "spect & 0.007 & 0.007 & 0.003 & 0.001 & 0.005 & 0.003 & 0.002 & 0.028 \\\\\n",
-      "spectf & 0.006 & 0.006 & 0.000 & 0.000 & 0.004 & 0.001 & 0.002 & 0.028 \\\\\n",
-      "transfusion & 0.009 & 0.009 & 0.000 & 0.000 & 0.005 & 0.004 & 0.008 & 0.028 \\\\\n",
-      "ttt & 0.017 & 0.017 & 0.000 & 0.003 & 0.004 & 0.001 & 0.002 & 0.027 \\\\\n",
-      "vote & 0.014 & 0.014 & 0.001 & 0.001 & 0.004 & 0.002 & 0.002 & 0.026 \\\\\n",
-      "wbc & 0.021 & 0.021 & 0.001 & 0.000 & 0.004 & 0.008 & 0.003 & 0.026 \\\\\n",
+      "colic & 0.015 & 0.015 & 0.001 & 0.000 & 0.000 & 0.006 & 0.002 & 0.015 \\\\\n",
+      "creditA & 0.022 & 0.022 & 0.000 & 0.000 & 0.000 & 0.002 & 0.002 & 0.014 \\\\\n",
+      "diabetes & 0.017 & 0.017 & 0.000 & 0.000 & 0.001 & 0.004 & 0.005 & 0.020 \\\\\n",
+      "german & 0.003 & 0.003 & 0.006 & 0.002 & 0.002 & 0.006 & 0.006 & 0.022 \\\\\n",
+      "haberman & 0.010 & 0.010 & 0.000 & 0.000 & 0.003 & 0.008 & 0.011 & 0.024 \\\\\n",
+      "heartC & 0.012 & 0.012 & 0.001 & 0.001 & 0.003 & 0.006 & 0.004 & 0.025 \\\\\n",
+      "heartH & 0.017 & 0.017 & 0.171 & 0.002 & 0.003 & 0.006 & 0.004 & 0.025 \\\\\n",
+      "heartS & 0.019 & 0.019 & 0.001 & 0.001 & 0.002 & 0.005 & 0.003 & 0.027 \\\\\n",
+      "hepati & 0.022 & 0.022 & 0.000 & 0.001 & 0.003 & 0.011 & 0.006 & 0.028 \\\\\n",
+      "iono & 0.028 & 0.028 & 0.025 & 0.005 & 0.003 & 0.015 & 0.004 & 0.025 \\\\\n",
+      "je4042 & 0.018 & 0.018 & 0.004 & 0.001 & 0.003 & 0.013 & 0.010 & 0.027 \\\\\n",
+      "je4243 & 0.010 & 0.010 & 0.003 & 0.000 & 0.003 & 0.005 & 0.008 & 0.027 \\\\\n",
+      "kc1 & 0.011 & 0.011 & 0.002 & 0.000 & 0.003 & 0.002 & 0.003 & 0.027 \\\\\n",
+      "kc2 & 0.018 & 0.018 & 0.000 & 0.000 & 0.003 & 0.011 & 0.009 & 0.028 \\\\\n",
+      "kc3 & 0.007 & 0.007 & 0.013 & 0.000 & 0.004 & 0.003 & 0.001 & 0.027 \\\\\n",
+      "liver & 0.025 & 0.025 & 0.000 & 0.000 & 0.004 & 0.003 & 0.006 & 0.027 \\\\\n",
+      "pc1req & 0.014 & 0.014 & 0.009 & 0.004 & 0.004 & 0.017 & 0.011 & 0.028 \\\\\n",
+      "pc4 & 0.009 & 0.009 & 0.000 & 0.000 & 0.004 & 0.002 & 0.002 & 0.027 \\\\\n",
+      "sonar & 0.019 & 0.019 & 0.001 & 0.001 & 0.004 & 0.006 & 0.004 & 0.027 \\\\\n",
+      "spect & 0.007 & 0.007 & 0.003 & 0.001 & 0.004 & 0.003 & 0.002 & 0.026 \\\\\n",
+      "spectf & 0.006 & 0.006 & 0.000 & 0.000 & 0.004 & 0.001 & 0.002 & 0.026 \\\\\n",
+      "transfusion & 0.009 & 0.009 & 0.000 & 0.000 & 0.004 & 0.004 & 0.008 & 0.026 \\\\\n",
+      "ttt & 0.017 & 0.017 & 0.000 & 0.003 & 0.004 & 0.001 & 0.002 & 0.025 \\\\\n",
+      "vote & 0.014 & 0.014 & 0.001 & 0.001 & 0.004 & 0.002 & 0.002 & 0.025 \\\\\n",
+      "wbc & 0.021 & 0.021 & 0.001 & 0.000 & 0.004 & 0.008 & 0.003 & 0.025 \\\\\n",
       "\\hline\n",
-      "Average & 0.015 & 0.015 & 0.011 & 0.001 & 0.004 & 0.006 & 0.005 & 0.027 \\\\\n"
+      "Average & 0.015 & 0.015 & 0.010 & 0.001 & 0.003 & 0.006 & 0.005 & 0.025 \\\\\n"
      ]
     }
    ],
